--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -1,18 +1,29 @@
-##############################################################
-##																												  ##
-##	      Seph Ortha's .newsboat/config file.							  ##
-##																												  ##
-##############################################################
+#----------------------------------------------------
+#                            _                 _
+#    _ __   _____      _____| |__   ___   __ _| |_
+#   | '_ \ / _ \ \ /\ / / __| '_ \ / _ \ / _` | __|
+#   | | | |  __/\ V  V /\__ \ |_) | (_) | (_| | |_
+#   |_| |_|\___| \_/\_/ |___/_.__/ \___/ \__,_|\__|
+#                           __ _
+#              __ ___ _ _  / _(_)__ _
+#             / _/ _ \ ' \|  _| / _` |
+#             \__\___/_||_|_| |_\__, |
+#                               |___/
+#
+# --- Seph's newsboat/config
+#----------------------------------------------------
+
 #---------Basic Settings
-auto-reload "no"
-reload-time "27" # Reloads feeds every 27 mins
+auto-reload yes
+reload-time 27
 reload-threads "100"
-max-items "0" # Keeps all downloaded articles
+max-items 369 # Keeps all downloaded articles
 history-limit "100" # Saves 100 searches to log file
 show-read-feeds "yes"
 external-url-viewer "urlview"
 always-display-description "yes"
 browser "brave"
+
 #---------Colors
 color background color75 black
 color listnormal color111 black
@@ -27,6 +38,7 @@ color hint-separator color73 color55 bold
 color hint-description color73 color55
 color article color81 black
 #end-of-text-marker default default
+
 #---------Highlighting
 highlight article "(^Feed:.*|^Title:.*|^Author:.*)" cyan default bold
 highlight article "(^Link:.*|^Date:.*)" default default
@@ -42,6 +54,7 @@ highlight feedlist "---.*---" color229 color200 bold
 highlight feedlist ".*0/0.." color201 color201
 highlight feedlist " N " color37 default
 always-display-description "yes"
+
 #---------Bindings
 unbind-key j
 unbind-key k
@@ -49,6 +62,7 @@ unbind-key h
 unbind-key H
 unbind-key L
 unbind-key c
+
 # bind keys
 bind-key ; macro-prefix
 bind-key h quit
@@ -56,9 +70,16 @@ bind-key BACKSPACE quit
 bind-key j down
 bind-key k up
 bind-key l open
-bind-key H prev-feed
-bind-key L next-feed
+bind-key j next articlelist
+bind-key k prev articlelist
+bind-key H prev-feed articlelist
+bind-key L next-feed articlelist
 bind-key c toggle-show-read-feeds
 bind-key U show-urls
+bind-key d pagedown
+bind-key u pageup
+bind-key G end
+bind-key g home
+
 #---------Macros
 macro w set browser "mpv %u" ; open-in-browser ; set browser "brave %u"
